<resources>
    <string name="app_name">UTSPraktik-IF5-10119170-ElbarunaWifaldzan</string>
    <string name="formpengisiandata">Form Pengisian Data</string>
    <string name="jenistes">Jenis Tes</string>

    <string name="kata2">Tanggal Terkonfirmasi</string>
    <string name="kata3">NIK</string>
    <string name="kata4">Nama</string>
    <string name="kata5">Tanggal Lahir</string>
    <string name="kata6">Jenis Kelamin</string>
    <string name="kata7">Hubungan Dengan Anda</string>

    <string name="js1">Rapid Antigen</string>
    <string name="js2">PCR</string>

    <string name="cekKembaliData">Cek Kembali Isian Data</string>

    <string name="kalimat1">Rapid Antigen</string>
    <string name="kalimat2">8 September 2021</string>
    <string name="kalimat3">7323456778941234</string>
    <string name="kalimat4">Mohammad Reksa</string>
    <string name="kalimat5">2 November 1993</string>
    <string name="kalimat6">Laki-laki</string>
    <string name="kalimat7">Orangtua</string>
    <string name="selanjutnya">Selanjutnya</string>

    <string name="kt1">Cek Hasil Tes</string>
    <string name="kt2">Ubah</string>

</resources>